@@ -490,6 +490,8 @@ public:
     void Say(const char *format, ...);
     void Say_StringID(uint32 string_id, const char *message3 = 0, const char *message4 = 0, const char *message5 = 0, 
         const char *message6 = 0, const char *message7 = 0, const char *message8 = 0, const char *message9 = 0);
+    void Say_StringID(uint32 type, uint32 string_id, const char *message3 = 0, const char *message4 = 0, const char *message5 = 0, 
+        const char *message6 = 0, const char *message7 = 0, const char *message8 = 0, const char *message9 = 0);
     void Shout(const char *format, ...);
     void Emote(const char *format, ...);
     void QuestJournalledSay(Client *QuestInitiator, const char *str);
